src/test/resources/invalid/typecheck/UnknownVar.vas
class Main is
    this() is
        i
    end
end